[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "pha-tool"
version = "0.1.0"
description = "A lightweight Process Hazard Analysis toolkit for risk-ranking PHA/HAZOP worksheets."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "PHA Tool Contributors" }
]
keywords = ["process hazard analysis", "PHA", "HAZOP", "risk matrix", "safety"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering"
]

[project.scripts]
pha-tool = "pha_tool.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pha_tool"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
